# ecs635u-final-year-project

./: .gitignore  README.md
Assets/Fonts/: NotoSansJP-Regular SDF.asset  NotoSansSC-Regular SDF.asset  NotoSansTC-Regular SDF.asset  NotoSerifJP-Regular SDF.asset
Assets/Materials/: AlwaysOnTopText.shader  AlwaysOnTopTextMaterial.mat  Black.mat  Eye.mat  Hotel Cover.mat  Ice Cream Cover.mat  Invis.mat  Light Brown.mat  Office Cover.mat  Pavement.mat  Yellow.mat
Assets/Park/: MainScene.unity
Assets/Scenes/: Sorano.unity  TestFiveScene.unity  TestFourScene.unity  TestOneScene.unity  TestThreeScene.unity  TestTwoScene.unity
Assets/Scripts/: CafeCoupleGameManager.cs  CafeCoupleNetworkManager.cs  CafeCoupleNpcController.cs  DirectableNpc.cs  DirectableNpcNetworkManager.cs  FollowerNpc.cs  FollowerNpcNetworkManager.cs  GameClock.cs  GameManager.cs  IndividualReservedGameManager.cs  IndividualReservedNetworkManager.cs  IndividualReservedNpcController.cs  InteractiveObject.cs  Interfaces.cs  MicrophoneRecorder.cs  NetworkManager.cs  NpcController.cs  NpcControllerOld.cs  NpcControllerOneOne.cs  NpcControllerTwo.cs  PlayerInfoManager.cs  PlayerMicrophone.cs  (+35 more)
Assets/StreamingAssets/: .env  CafeCoupleDirector.py  DirectableNpc.py  DirectorBrain.py  FollowerNpc.py  IndividualReservedBrain.py  PythonServer.py  SceneDirector.py  ShopkeeperNpc.py  TEST2NpcReactAgent.py  TESTDirectorBrain140325.py  TESTNewGeminiLangChain.py  TESTNpcAgent110325.py  TESTNpcAgent110325Client.py  TESTNpcAgentBasic.py  TESTNpcReactAgent.py  TESTNpcReactAgent080325 copy.py  TESTNpcReactAgent110225.py  TESTPythonNpcAgentBrain120325 copy.py  TESTPythonNpcAgentBrain120325.py  TESTPythonServer110325.py  TESTPythonServerBasic.py  TESTPythonServerEdgeTTS.py  TESTPythonServerNPCReAct.py  TESTPythonServerWhisper.py  TESTReviewerFlow.py  TESTSomeRandomAgent.py  TESTWeatherReactAgent.py  chatbottest2.py  cppcudatest.py  edgetts.py  lemonfoxtest.py  pyproject.toml
ProjectSettings/: EditorBuildSettings.asset  NavMeshAreas.asset  PackageManagerSettings.asset  ProjectSettings.asset  QualitySettings.asset  TagManager.asset
(+292 files in other folders)
