[tool.poetry]
name = "streamingassets"
version = "0.1.0"
description = ""
authors = ["jmigsan <43961001+jmigsan@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.8"
uvicorn = "^0.34.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
