[project]
name = "streamingassets"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asyncio>=3.4.3",
    "edge-tts>=7.0.0",
    "fastapi>=0.115.11",
    "langchain-community>=0.3.19",
    "langchain-google-genai>=2.0.11",
    "langgraph>=0.3.5",
    "numba>=0.61.0",
    "numpy>=2.1.3",
    "openai-whisper>=20240930",
    "pydantic>=2.10.6",
    "python-multipart>=0.0.20",
    "torch>=2.6.0",
    "typing-extensions>=4.12.2",
    "uvicorn>=0.34.0",
    "websockets>=15.0.1",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu118", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true
